--- a/jeugdzorg/jeugdzorg/static/scss/partials/_contact.scss
+++ b/jeugdzorg/jeugdzorg/static/scss/partials/_contact.scss
@@ -5,7 +5,7 @@
   padding: 0;
   .contact {
     margin-bottom: 0;
-    height: 100%;
+    min-height: 100%;
   }
 }
 .contact-naam,
@@ -317,13 +317,13 @@ dl.contact-meta {
     background: none;
     box-shadow: none;
   }
-  .contact-avatar {
+  .contact .contact-avatar {
     left: 0;
     right: auto;
     top: -.3em;
     width: 1em;   
   }
-  dt.contact-naam + dd {
+  .contact dt.contact-naam + dd {
     font-size: $fontSize;
     & ~ * {
       display: none;
